[gd_scene load_steps=18 format=3 uid="uid://d3icya6p4g4ha"]

[ext_resource type="PackedScene" uid="uid://b3dqtg4ixmken" path="res://player.tscn" id="1_lox15"]
[ext_resource type="Script" path="res://main.gd" id="1_wjhy3"]
[ext_resource type="Script" path="res://score_label.gd" id="3_bkxlk"]
[ext_resource type="Script" path="res://health_label.gd" id="4_wiqmn"]
[ext_resource type="PackedScene" uid="uid://ylvrweafsayd" path="res://coraltree.glb" id="5_su8vk"]
[ext_resource type="PackedScene" uid="uid://b2ti8nqdk1jsp" path="res://coralgg.glb" id="6_lt55f"]
[ext_resource type="PackedScene" uid="uid://cpk2pntxkx023" path="res://coralespiral.glb" id="7_udxkl"]
[ext_resource type="PackedScene" uid="uid://cn4wiafttjv54" path="res://coralbolha.glb" id="8_peuvv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tqnp4"]
albedo_color = Color(0.065887, 0.391723, 0.7379, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_aga7c"]
material = SubResource("StandardMaterial3D_tqnp4")

[sub_resource type="BoxShape3D" id="BoxShape3D_y8yna"]
size = Vector3(0.067749, 1.16528, 2.01759)

[sub_resource type="BoxShape3D" id="BoxShape3D_gwcb1"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_27dfq"]
albedo_color = Color(0.90086, 0.671742, 0.466427, 1)

[sub_resource type="BoxMesh" id="BoxMesh_v1cti"]
material = SubResource("StandardMaterial3D_27dfq")
size = Vector3(60, 2, 60)

[sub_resource type="Curve3D" id="Curve3D_5q1q7"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -17, 0, -13, 0, 0, 0, 0, 0, 0, 17, 0, -13, 0, 0, 0, 0, 0, 0, 17, 0, 14, 0, 0, 0, 0, 0, 0, -17, 0, 14, 0, 0, 0, 0, 0, 0, -17, 0, -13),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ldree"]
albedo_color = Color(0.227451, 0.239216, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_8adub"]
material = SubResource("StandardMaterial3D_ldree")

[node name="Main" type="Node3D"]
script = ExtResource("1_wjhy3")

[node name="Parede Esquerda" type="StaticBody3D" parent="."]
collision_layer = 4

[node name="MeshInstance3D" type="MeshInstance3D" parent="Parede Esquerda"]
transform = Transform3D(3.93403e-06, -10, 7.86805e-07, 6.35275e-21, -4.37114e-07, -18, 30, 1.31134e-06, -1.67126e-13, 30, 17, 0)
mesh = SubResource("PlaneMesh_aga7c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Parede Esquerda"]
transform = Transform3D(30, 0, 0, 0, 30, 0, 0, 0, 30, 30.6022, 17.6877, 0.0979614)
shape = SubResource("BoxShape3D_y8yna")

[node name="Parede Direita" type="StaticBody3D" parent="."]
collision_layer = 4

[node name="MeshInstance3D" type="MeshInstance3D" parent="Parede Direita"]
transform = Transform3D(-1.31134e-06, 10, -7.86805e-07, 0, -4.37114e-07, -18, -30, -4.37114e-07, 9.83412e-14, -30, 17, 0)
mesh = SubResource("PlaneMesh_aga7c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Parede Direita"]
transform = Transform3D(30, 0, 0, 0, 30, 0, 0, 0, 30, -30.3978, 17.6877, 0.0979614)
shape = SubResource("BoxShape3D_y8yna")

[node name="Parede Fundo" type="StaticBody3D" parent="."]
collision_layer = 4

[node name="MeshInstance3D" type="MeshInstance3D" parent="Parede Fundo"]
transform = Transform3D(30, 0, 0, 0, -4.37114e-07, -18, 0, 10, -7.86805e-07, 0, 17, -30)
mesh = SubResource("PlaneMesh_aga7c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Parede Fundo"]
transform = Transform3D(-1.31134e-06, 0, -30, 0, 30, 0, 30, 0, -1.31134e-06, -0.0706005, 17.6877, -30.902)
shape = SubResource("BoxShape3D_y8yna")

[node name="Parede Frente" type="StaticBody3D" parent="."]
collision_layer = 4

[node name="MeshInstance3D" type="MeshInstance3D" parent="Parede Frente"]
transform = Transform3D(-30, 8.74228e-07, -6.87847e-14, 0, -4.37114e-07, -18, -2.62268e-06, -10, 7.86805e-07, 0, 17, 30)
mesh = SubResource("PlaneMesh_aga7c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Parede Frente"]
transform = Transform3D(-1.31134e-06, 0, -30, 0, 30, 0, 30, 0, -1.31134e-06, -0.0706005, 17.6877, 30.098)
shape = SubResource("BoxShape3D_y8yna")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_gwcb1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_v1cti")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.248403, -0.617992, -0.74591, 0, -0.770046, 0.637989, -0.968657, -0.158478, -0.191281, -13.4625, 3.74469, -12.4432)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_lox15")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, -2, -0.707125, 39.5062)
size = 20.0

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_5q1q7")

[node name="SpawnPosition" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-4.37113e-08, 0, -0.999999, 0, 1, 0, 0.999999, 0, -4.37113e-08, -17, 0, -13)

[node name="Cylinders" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 0, -13)
mesh = SubResource("CylinderMesh_8adub")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, -17, 0, 14)
mesh = SubResource("CylinderMesh_8adub")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, -13)
mesh = SubResource("CylinderMesh_8adub")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, 14)
mesh = SubResource("CylinderMesh_8adub")

[node name="AmigoTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="MobTimer" type="Timer" parent="."]
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 22.0
offset_top = 6.0
offset_right = 94.0
offset_bottom = 29.0
text = "Pontos: 0"
script = ExtResource("3_bkxlk")

[node name="HealthLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 24.0
offset_top = 32.0
offset_right = 94.0
offset_bottom = 55.0
text = "Vida: 5
"
script = ExtResource("4_wiqmn")

[node name="RetryScreen" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.329412)

[node name="Label" type="Label" parent="UserInterface/RetryScreen"]
layout_mode = 0
offset_left = 445.0
offset_top = 352.0
offset_right = 750.0
offset_bottom = 375.0
text = "Para tentar novamente, aperte ESPAÇO"

[node name="NextLevelScreen" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.329412)

[node name="Label" type="Label" parent="UserInterface/NextLevelScreen"]
layout_mode = 0
offset_left = 445.0
offset_top = 352.0
offset_right = 750.0
offset_bottom = 375.0
text = "Para seguir para a próxima fase, 
aperte ESPAÇO"

[node name="coraltree" parent="." instance=ExtResource("5_su8vk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19, 0, 23)

[node name="coraltree2" parent="." instance=ExtResource("5_su8vk")]
transform = Transform3D(0.848528, 0, 0.848528, 0, 1.2, 0, -0.848528, 0, 0.848528, -17, 0, -16)

[node name="coraltree3" parent="." instance=ExtResource("5_su8vk")]
transform = Transform3D(-0.388229, 0, -1.44889, 0, 1.5, 0, 1.44889, 0, -0.388229, 15, 0, 20)

[node name="coralgg" parent="." instance=ExtResource("6_lt55f")]
transform = Transform3D(0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, -16, 0, -14)

[node name="coralespiral" parent="." instance=ExtResource("7_udxkl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, -16)

[node name="coralespiral2" parent="." instance=ExtResource("7_udxkl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19, 0, -14)

[node name="coralbolha" parent="." instance=ExtResource("8_peuvv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -14)

[node name="coralbolha2" parent="." instance=ExtResource("8_peuvv")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -18, 0, 25)

[node name="coralespiral3" parent="." instance=ExtResource("7_udxkl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, 20)

[node name="coralespiral4" parent="." instance=ExtResource("7_udxkl")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 12, 0, 21)

[node name="coralespiral5" parent="." instance=ExtResource("7_udxkl")]
transform = Transform3D(1.17, 0, 0, 0, 1.17, 0, 0, 0, 1.17, 14, 0, 17)

[connection signal="catch" from="Player" to="." method="_on_player_catch"]
[connection signal="catch" from="Player" to="UserInterface/ScoreLabel" method="_on_player_catch"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="hit" from="Player" to="UserInterface/HealthLabel" method="_on_player_hit"]
[connection signal="timeout" from="AmigoTimer" to="." method="_on_amigo_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_timer_timeout"]
